--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -1,173 +1,59 @@
-body{
-	background: black;
+html {
+  font-size: 62.5%;
+  font-family: "Poppins", sans-serif;
 }
+* {
+  box-sizing: border-box;
+}
+:root {
+  --primary: purple;
+  --secondary: blue;
+}
+body {
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(
+    to right bottom,
+    var(--primary),
+    var(--secondary)
+  );
 
-#game{
-	position: absolute;
-	top: 50%;
-	left:50%;
-	margin:0;
-	overflow: hidden;
-	background: white;
+  display: felex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 5rem;
 }
-
-*{ font-family: 'VT323', monospace;
+.dropdown {
+  width: 38rem;
+  position: relative;
 }
-
-
-.bg{
-    width: 1292px;
-    height: 656px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: url("./images/Mario.jpg");
-    background-size: cover;
-    background-position: center center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: right;
-    align-items: center;
-}
-
-.button{
- 
-    color: rgb(204, 54, 54);
-    padding: 5px 32px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 12px;
-    font-size: 66px;
-    margin-left:16px;
-    margin-right:486px;
-    margin-top: 40px;
-  }
-.button a{
-    cursor: pointer;
-    text-decoration: none;
-    color: rgb(204, 39, 39) ;
-    background-color: #e64b4050;
-    border-radius: 12px;
-}
-.poziomy{
-    
-    position:absolute;
-    right: -210px;
-    top: 145px;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.3s;
-    color: rgb(204, 54, 54);
-    padding: 5px 32px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 12px;
-    font-size: 66px;
-    margin-left:16px;
-    margin-right:486px;
-    margin-top: 40px;
-}
-.poziomy a {
-    cursor: pointer;
-    text-decoration: none;
-    color: rgb(204, 39, 39) ;
-    background-color: #e64b4050;
-    border-radius: 12px;
-}
-.poziomy:target{
-    visibility: visible;
+.dropdown:hover .dropdown-list{
     opacity: 1;
-}
-
-.controls{
-    
-    position:absolute;
-    flex-wrap: wrap;
-    right: -470px;
-    top: 145px;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.3s;
-    color: rgb(204, 54, 54);
-    padding: 5px 32px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 12px;
-    font-size: 26px;
-    margin-left:16px;
-    margin-right:486px;
-    margin-top: 40px;
-}
-.controls a {
-    cursor: pointer;
-    flex-wrap: wrap;
-    text-decoration: none;
-    color: rgb(204, 39, 39) ;
-    background-color: #e64b4050;
-    border-radius: 12px;
-}
-.controls:target{
     visibility: visible;
-    opacity: 1;
 }
-
-.score{
-    position:absolute;
-    right: 450px;
-    top: 145px;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.3s;
-    padding: 5px 32px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 12px;
-    font-size: 36px;
-    margin-left:16px;
-    margin-right:386px;
-    margin-top: 40px;
-    text-decoration: none;
-    color: rgb(204, 39, 39) ;
-    background-color: #e64b4050;
-    border-radius: 12px;
-    white-space: normal;
-    }
-.score:target{
-    visibility: visible;
-    opacity: 1; 
+.dropdown-select {
+  padding: 2.5rem;
+  border-radius: 4px;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.6rem;
+  cursor: pointer;
 }
-
-.hide{
-    display: none;
+.dropdown-list {
+  border-radius: 4px;
+  background-color: white;
+  position: absolute;
+  top: 110%;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s linear, visibility 0.2s linear;
 }
-
-.credits{
-    position:absolute;
-    right: 410px;
-    top: 145px;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.3s;
-    color: rgb(204, 54, 54);
-    padding: 5px 32px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 12px;
-    font-size: 36px;
-    margin-left:16px;
-    margin-right:386px;
-    margin-top: 40px;
-}
-.credits a {
-    text-decoration: none;
-    color: rgb(204, 39, 39) ;
-    background-color: #e64b4050;
-    border-radius: 12px;
-    }
-
-.credits:target{
-    visibility: visible;
-    opacity: 1;
+.ćwiczenie {
+  padding: 1rem;
+  font-size: 1.4rem;
 }
