--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -1,81 +1,77 @@
 html {
-	font-size: 62.5%;
-	font-family: 'VT323', monospace;
+  font-size: 62.5%;
+  font-family: "VT323", monospace;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-	--primary: purple;
-	--secondary: blue;
+  --primary: purple;
+  --secondary: blue;
 }
 
 body {
-	width: 100%;
-	height: 100vh;
-	background-image: linear-gradient(to right bottom,
-			var(--primary),
-			var(--secondary));
-	display: felex;
-	justify-content: center;
-	align-items: flex-start;
-	padding: 5rem;
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(
+    to right bottom,
+    var(--primary),
+    var(--secondary)
+  );
+  display: felex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 5rem;
 }
 
 .dropdown {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	width: 38rem;
-	flex-wrap: wrap;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 38rem;
+  flex-wrap: wrap;
 }
 
 .dropdown:hover .dropdown-list {
-	opacity: 1;
-	visibility: visible;
+  opacity: 1;
+  visibility: visible;
 }
 
 .dropdown-select {
-	padding: 2.5rem;
-	border-radius: 4px;
-	background-color: white;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	font-size: 1.6rem;
-	cursor: pointer;
+  padding: 2.5rem;
+  border-radius: 4px;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.6rem;
+  cursor: pointer;
 }
 
 .dropdown-list {
-	position: absolute;
-	margin-top: 1rem;
-	top:100%;
-	width: 100%;
-	border-radius: 4px;
-	background-color: white;
+  position: absolute;
+  margin-top: 1rem;
+  top: 100%;
+  width: 100%;
+  border-radius: 4px;
+  background-color: white;
 
-	font-size: 1.6rem;
-	visibility: hidden;
-	transition: 0.2s;
+  font-size: 1.6rem;
+  visibility: hidden;
+  transition: 0.2s;
 }
-
-.exercise {
-	padding: 1rem;
-	font-size: 1.4rem;
-	cursor: pointer;
-}
-
-
 .kalku {
-	display: flex;
-	justify-content: center;
-	width: 38rem;
-
-
-	transition: opacity 0.2s linear, visibility 0.2s linear;
+  display: flex;
+  justify-content: center;
+  /* visibility: hidden; */
+ 
+  flex-wrap: wrap;
+  background-color: white;
+  visibility: hidden; 
+  transition: 0.2s;
 }
 
 /* .kalku :target {
@@ -83,11 +79,22 @@ body {
   visibility: visible;
 } */
 .kalku-licznik {
-	right: -680px;
-	border-radius: 4px;
-	background-color: white;
-	left: 0;
-	right: 0;
-	opacity: 0;
-	visibility: hidden;
+  right: -180px;
+  border-radius: 4px;
+  background-color: white;
+  left: 0;
+  right: 0; 
+  opacity: 0;
+  /* visibility: hidden;
+  transition: 0.2s; */
+}
+
+.exercise {
+  padding: 1rem;
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+.excersise:hover .kalku {
+  opacity: 1;
+  visibility: visible;
 }
