--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -32,6 +32,7 @@ body {
   justify-content: center;
   width: 100%;
   flex-wrap: wrap;
+  
 }
 
 .dropdown:hover .dropdown-list {
@@ -49,6 +50,8 @@ body {
   justify-content: space-between;
   font-size: 1.6rem;
   cursor: pointer;
+  height: 100%;
+
 }
 
 .dropdown-list {
@@ -58,6 +61,8 @@ body {
   width: 100%;
   border-radius: 4px;
   background-color: white;
+  height: 100%;
+  
 
   font-size: 1.6rem;
   visibility: hidden;
@@ -73,6 +78,8 @@ body {
   background-color: white;
   visibility: hidden; 
   transition: 0.2s;
+  height: 50%;
+  width:100%;
 }
 
 
