--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -32,6 +32,7 @@ body {
   justify-content: center;
   width: 100%;
   flex-wrap: wrap;
+  height: 35%;
 }
 
 .dropdown:hover .dropdown-list {
@@ -49,10 +50,56 @@ body {
   justify-content: space-between;
   font-size: 1.6rem;
   cursor: pointer;
+  height: 35%;
+ 
 }
 
 .dropdown-list {
-  position: absolute;
+  margin-top: 1rem;
+  top: 100%;
+  width: 100%;
+  border-radius: 4px;
+  background-color: white;
+
+  font-size: 1.6rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.2s;
+  display: flex;
+  height: 100%;
+  justify-content: space-evenly;
+  flex-direction: column;
+
+}
+
+.kalku {
+  display: inline-block;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: white;
+  visibility: hidden;
+  transition: 0.2s;
+  width: 100%;
+  height: 50%;
+}
+
+.kalku-licznik {
+  right: -180px;
+  border-radius: 4px;
+  background-color: white;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.2s;
+}
+
+.exercise {
+  padding: 1rem;
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+#pompka {
   margin-top: 1rem;
   top: 100%;
   width: 100%;
@@ -65,37 +112,8 @@ body {
   transition: 0.2s;
 }
 
-
-.kalku {
-  display: inline-block;
-  justify-content: center;
-  flex-wrap: wrap;
-  background-color: white;
-  visibility: hidden; 
-  transition: 0.2s;
-}
-
-
-.kalku-licznik {
-  right: -180px;
-  border-radius: 4px;
-  background-color: white;
-  left: 0;
-  right: 0; 
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.2s;
-}
-
-.exercise {
-  padding: 1rem;
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-
-
-.active{
+/* to na dole nusi być  */
+.active {
   visibility: visible;
   opacity: 1;
 }
