--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -32,7 +32,6 @@ body {
   justify-content: center;
   width: 100%;
   flex-wrap: wrap;
-
 }
 
 .dropdown:hover .dropdown-list {
@@ -51,28 +50,24 @@ body {
   font-size: 1.6rem;
   cursor: pointer;
   height: 100%;
-
 }
 
-.dropdown-list { 
-
+.dropdown-list {
   margin-top: 1rem;
   top: 100%;
   width: 100%;
   border-radius: 4px;
   background-color: white;
-  
+
   font-size: 1.6rem;
   visibility: hidden;
   opacity: 0;
   transition: 0.2s;
-  display: flex; 
+  display: flex;
   /* to trzeba zmienić na % */
   height: 140px;
   justify-content: space-evenly;
   flex-direction: column;
- 
-
 }
 
 .kalku {
@@ -84,6 +79,32 @@ body {
   transition: 0.2s;
   width: 100%;
   height: 50%;
+}
+
+.kalku-licznik {
+  border-radius: 4px;
+  background-color: white;
+  left: 0;
+  right: 0;
+  visibility: hidden;
+  transition: 0.2s;
+}
+
+.exercise {
+  padding: 1rem;
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+
+.kalku {
+  display: inline-block;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: white;
+  visibility: hidden;
+  transition: 0.2s;
+  height: 50%;
+  width: 100%;
 }
 
 .kalku-licznik {
@@ -102,55 +123,49 @@ body {
   font-size: 1.4rem;
   cursor: pointer;
 }
-#pompka {
-  margin-top: 1rem;
-  top: 100%;
-  width: 100%;
-  border-radius: 4px;
-  background-color: white;
-  height: 100%;
-  
-
-  font-size: 1.6rem;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.2s;
-}
 
 
-.kalku {
-  display: inline-block;
+#number {
+  height: 25px;
+  width: 250px;
+  display: flex;
+  margin-top: 10%;
   justify-content: center;
-  flex-wrap: wrap;
-  background-color: white;
-  visibility: hidden; 
-  transition: 0.2s;
-  height: 50%;
-  width:100%;
+  border: 1px solid black;
+  text-align: center;
+  background-color: aliceblue;
+  font-size: 1.6rem;
+}
+#increment {
+  height: 25px;
+  width: 100px;
+  margin-top: 5%;
+  margin-left: 15%;
+}
+#decrement {
+  height: 25px;
+  width: 100px;
+  margin-top: -5%;
+  /* margin-right: 33%; */
+}
+#done {
+  height: 100px;
+  width: 100px;
+  margin-top: 7%;
+  display: inline-block;
+  margin-left: 5%;
+}
+#sets {
+  height: 100px;
+  width: 100px;
+  margin-top: 7%;
+  display: inline-block;
+  text-align:justify;
+  
+  margin-left: 25%;
 }
 
-
-.kalku-licznik {
-  right: -180px;
-  border-radius: 4px;
-  background-color: white;
-  left: 0;
-  right: 0; 
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.2s;
-}
-
-.exercise {
-  padding: 1rem;
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-
-
-.active{
-
+.active {
   visibility: visible;
   opacity: 1;
 }
