--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -1,6 +1,6 @@
 html {
   font-size: 62.5%;
-  font-family: "VT323", monospace;
+  font-family:'Gluten', cursive;
 }
 
 * {
@@ -42,7 +42,7 @@ body {
 .dropdown-select {
   padding: 2.5rem;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(242, 214, 247, 0.863);
   width: 100%;
   display: flex;
   align-items: center;
@@ -57,7 +57,7 @@ body {
   top: 100%;
   width: 100%;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(155, 115, 221, 0.767);
 
   font-size: 1.6rem;
   visibility: hidden;
@@ -70,20 +70,9 @@ body {
   flex-direction: column;
 }
 
-.kalku {
-  display: inline-block;
-  justify-content: center;
-  flex-wrap: wrap;
-  background-color: white;
-  visibility: hidden;
-  transition: 0.2s;
-  width: 100%;
-  height: 50%;
-}
-
 .kalku-licznik {
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(236, 167, 238, 0.418);
   left: 0;
   right: 0;
   visibility: hidden;
@@ -97,14 +86,15 @@ body {
 }
 
 .kalku {
-  display: inline-block;
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  background-color: white;
+  background-color: rgba(136, 80, 209, 0.479);
   visibility: hidden;
   transition: 0.2s;
   height: 50%;
   width: 100%;
+  border-radius: 4px;
 }
 
 .kalku-licznik {
@@ -123,9 +113,22 @@ body {
   font-size: 1.4rem;
   cursor: pointer;
 }
+.pull-up{
+  display: flex;
+  justify-content: center;
+  font-size: 1.6rem;
+
+}
+.select{
+  display: flex;
+  justify-content: center;
+  font-size: 1.6rem;
+
+}
 
 
 #number {
+  position: relative;
   height: 25px;
   width: 250px;
   display: flex;
@@ -133,7 +136,7 @@ body {
   justify-content: center;
   border: 1px solid black;
   text-align: center;
-  background-color: aliceblue;
+  background-color: rgb(125, 85, 233);
   font-size: 1.6rem;
 }
 #increment {
