--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -86,8 +86,8 @@ body {
 }
 
 .kalku {
-  display: flex;
-  justify-content: center;
+  display: inline-block;
+  justify-content: space-around;
   flex-wrap: wrap;
   background-color: rgba(136, 80, 209, 0.479);
   visibility: hidden;
@@ -114,24 +114,31 @@ body {
   cursor: pointer;
 }
 .pull-up{
+  margin-top: 5%;
   display: flex;
   justify-content: center;
   font-size: 1.6rem;
-
+}
+.numery{
+display: inline-block;
+justify-content: space-around;
+font-size: 1.6rem;
 }
 .select{
-  display: flex;
+  display: inline-block;
   justify-content: center;
   font-size: 1.6rem;
-
+}
+.block{
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.6rem;
 }
 
-
 #number {
-  position: relative;
+ 
   height: 25px;
   width: 250px;
-  display: flex;
   margin-top: 10%;
   justify-content: center;
   border: 1px solid black;
@@ -156,7 +163,6 @@ body {
   width: 100px;
   margin-top: 7%;
   display: inline-block;
-  margin-left: 5%;
 }
 #sets {
   height: 100px;
@@ -164,8 +170,6 @@ body {
   margin-top: 7%;
   display: inline-block;
   text-align:justify;
-  
-  margin-left: 25%;
 }
 
 .active {
