--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -135,6 +135,17 @@ font-size: 1.6rem;
   font-size: 1.6rem;
 }
 
+/* .pullup{
+  visibility: hidden;
+  transition: 0.2s;
+  opacity: 0;
+}
+.pompka{
+  visibility: hidden;
+  transition: 0.2s;
+  opacity: 0;
+} */
+
 #number {
  
   height: 25px;
