--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -120,8 +120,9 @@ body {
   font-size: 1.6rem;
 }
 .numery{
-display: inline-block;
-justify-content: space-around;
+margin-top: -10%;
+display:inline-block;
+justify-content: space-between;
 font-size: 1.6rem;
 }
 .select{
@@ -131,18 +132,20 @@ font-size: 1.6rem;
 }
 .block{
   display: flex;
-  justify-content: space-around;
+  justify-content: stretch;
   font-size: 1.6rem;
 }
 
-
-
+/* 
+#kalku1{
+  display:flex;
+  justify-content: center;
+} */
 #number {
- 
   height: 25px;
   width: 250px;
   margin-top: 10%;
-  justify-content: center;
+  /* justify-content: center; */
   border: 1px solid black;
   text-align: center;
   background-color: rgb(125, 85, 233);
@@ -151,27 +154,22 @@ font-size: 1.6rem;
 #increment {
   height: 25px;
   width: 100px;
-  margin-top: 5%;
-  margin-left: 15%;
+  /* margin-top: 5%; */
+
 }
 #decrement {
   height: 25px;
   width: 100px;
-  margin-top: -5%;
   /* margin-right: 33%; */
 }
 #done {
   height: 100px;
   width: 100px;
-  margin-top: 7%;
-  display: inline-block;
 }
 #sets {
   height: 100px;
   width: 100px;
-  margin-top: 7%;
-  display: inline-block;
-  text-align:justify;
+ 
 }
 
 .active {
@@ -179,5 +177,5 @@ font-size: 1.6rem;
   opacity: 1;
 }
 .show {
-  display: block
+  display: flex
 }
