--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -119,6 +119,21 @@ body {
   justify-content: center;
   font-size: 1.6rem;
 }
+
+.push-up{
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  font-size: 1.6rem;
+}
+
+.squat{
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  font-size: 1.6rem;
+}
+
 .numery{
 margin-top: -10%;
 display:inline-block;
@@ -136,11 +151,6 @@ font-size: 1.6rem;
   font-size: 1.6rem;
 }
 
-/* 
-#kalku1{
-  display:flex;
-  justify-content: center;
-} */
 #number {
   height: 25px;
   width: 250px;
@@ -169,7 +179,16 @@ font-size: 1.6rem;
 #sets {
   height: 100px;
   width: 100px;
- 
+  flex-wrap: wrap;
+}
+#sets2 {
+  height: 100px;
+  width: 100px;
+  flex-wrap: wrap;
+}#sets3 {
+  height: 100px;
+  width: 100px;
+  flex-wrap: wrap;
 }
 
 .active {
