--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -146,8 +146,8 @@ font-size: 1.6rem;
   font-size: 1.6rem;
 }
 .block{
-  display: flex;
-  justify-content: stretch;
+  display: inline-block;
+  justify-content:space-around;
   font-size: 1.6rem;
 }
 
@@ -189,6 +189,11 @@ font-size: 1.6rem;
   height: 100px;
   width: 100px;
   flex-wrap: wrap;
+}
+#reset{
+  margin-top: 5%;
+  height: 25px;
+  width: 200px;
 }
 
 .active {
