--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -69,6 +69,18 @@ body {
   justify-content: space-evenly;
   flex-direction: column;
 }
+#additional {
+  margin-top: 1rem;
+  top: 45px;
+  width: 100%;
+  border-radius: 4px;
+  background-color: rgba(155, 115, 221, 0.767);
+  font-size: 1.6rem;
+  transition: 0.2s;
+  height: 40px;
+  justify-content: space-evenly;
+
+}
 
 /* .kalku-licznik {
   border-radius: 4px;
@@ -134,6 +146,13 @@ body {
   font-size: 1.6rem;
 }
 
+.other{
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  font-size: 1.6rem;
+}
+
 .numery{
 margin-top: -10%;
 display:inline-block;
@@ -151,36 +170,41 @@ font-size: 1.6rem;
   font-size: 1.6rem;
 }
 
-#number {
+.number {
   height: 25px;
   width: 250px;
   margin-top: 10%;
   /* justify-content: center; */
   border: 1px solid black;
   text-align: center;
-  background-color: rgb(125, 85, 233);
+  background-color: rgba(242, 214, 247, 0.863);
   font-size: 1.6rem;
 }
 #increment {
   height: 25px;
   width: 100px;
+  background-color: rgba(241, 179, 205, 0.863);
   /* margin-top: 5%; */
 
 }
 #decrement {
   height: 25px;
   width: 100px;
+  background-color: rgb(122, 190, 236);
   /* margin-right: 33%; */
 }
 #done {
   height: 100px;
   width: 100px;
+  background-color: rgba(242, 214, 247, 0.863);
 }
 #sets {
   height: 100px;
   width: 100px;
   flex-wrap: wrap;
+  background-color: rgba(242, 214, 247, 0.863);
 }
+
 #sets2 {
   height: 100px;
   width: 100px;
@@ -190,10 +214,16 @@ font-size: 1.6rem;
   width: 100px;
   flex-wrap: wrap;
 }
+#sets4 {
+  height: 100px;
+  width: 100px;
+  flex-wrap: wrap;
+}
 #reset{
   margin-top: 5%;
   height: 25px;
   width: 200px;
+  background-color: rgb(235, 94, 94);
 }
 
 .active {
