--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -1,6 +1,6 @@
 html {
   font-size: 62.5%;
-  font-family:'Gluten', cursive;
+  font-family: "Gluten", cursive;
 }
 
 * {
@@ -79,7 +79,6 @@ body {
   transition: 0.2s;
   height: 40px;
   justify-content: space-evenly;
-
 }
 
 /* .kalku-licznik {
@@ -125,48 +124,48 @@ body {
   font-size: 1.4rem;
   cursor: pointer;
 } */
-.pull-up{
+.pull-up {
   margin-top: 5%;
   display: flex;
   justify-content: center;
   font-size: 1.6rem;
 }
 
-.push-up{
+.push-up {
   margin-top: 5%;
   display: flex;
   justify-content: center;
   font-size: 1.6rem;
 }
 
-.squat{
+.squat {
   margin-top: 5%;
   display: flex;
   justify-content: center;
   font-size: 1.6rem;
 }
 
-.other{
+.dodaj {
   margin-top: 5%;
   display: flex;
   justify-content: center;
   font-size: 1.6rem;
 }
 
-.numery{
-margin-top: -10%;
-display:inline-block;
-justify-content: space-between;
-font-size: 1.6rem;
+.numery {
+  margin-top: -10%;
+  display: inline-block;
+  justify-content: space-between;
+  font-size: 1.6rem;
 }
-.select{
+.select {
   display: inline-block;
   justify-content: center;
   font-size: 1.6rem;
 }
-.block{
+.block {
   display: inline-block;
-  justify-content:space-around;
+  justify-content: space-around;
   font-size: 1.6rem;
 }
 
@@ -185,7 +184,6 @@ font-size: 1.6rem;
   width: 100px;
   background-color: rgba(241, 179, 205, 0.863);
   /* margin-top: 5%; */
-
 }
 #decrement {
   height: 25px;
@@ -210,7 +208,8 @@ font-size: 1.6rem;
   width: 100px;
   flex-wrap: wrap;
   background-color: rgba(242, 214, 247, 0.863);
-}#sets3 {
+}
+#sets3 {
   height: 100px;
   width: 100px;
   flex-wrap: wrap;
@@ -222,7 +221,7 @@ font-size: 1.6rem;
   flex-wrap: wrap;
   background-color: rgba(242, 214, 247, 0.863);
 }
-#reset{
+#reset {
   margin-top: 5%;
   height: 25px;
   width: 200px;
@@ -234,5 +233,5 @@ font-size: 1.6rem;
   opacity: 1;
 }
 .show {
-  display: flex
+  display: flex;
 }
