--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -106,6 +106,7 @@ body {
   height: 50%;
   width: 100%;
   border-radius: 4px;
+
 }
 
 /* .kalku-licznik {
@@ -152,6 +153,7 @@ body {
   font-size: 1.6rem;
 }
 
+
 .numery {
   margin-top: -10%;
   display: inline-block;
@@ -165,7 +167,7 @@ body {
 }
 .block {
   display: inline-block;
-  justify-content: space-around;
+  justify-content: center;
   font-size: 1.6rem;
 }
 
@@ -178,6 +180,10 @@ body {
   text-align: center;
   background-color: rgba(242, 214, 247, 0.863);
   font-size: 1.6rem;
+}
+
+.dodaj{
+  
 }
 #increment {
   height: 25px;
