--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -81,20 +81,7 @@ body {
   justify-content: space-evenly;
 }
 
-/* .kalku-licznik {
-  border-radius: 4px;
-  background-color: rgba(236, 167, 238, 0.418);
-  left: 0;
-  right: 0;
-  visibility: hidden;
-  transition: 0.2s;
-} */
-/* 
-.exercise {
-  padding: 1rem;
-  font-size: 1.4rem;
-  cursor: pointer;
-} */
+
 
 .kalku {
   display: none;
@@ -106,25 +93,8 @@ body {
   height: 50%;
   width: 100%;
   border-radius: 4px;
-
 }
 
-/* .kalku-licznik {
-  right: -180px;
-  border-radius: 4px;
-  background-color: white;
-  left: 0;
-  right: 0;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.2s;
-} */
-
-/* .exercise {
-  padding: 1rem;
-  font-size: 1.4rem;
-  cursor: pointer;
-} */
 .pull-up {
   margin-top: 5%;
   display: flex;
@@ -145,6 +115,12 @@ body {
   justify-content: center;
   font-size: 1.6rem;
 }
+.dodaj{
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  font-size: 1.6rem;
+}
 
 .other {
   margin-top: 5%;
@@ -153,11 +129,10 @@ body {
   font-size: 1.6rem;
 }
 
-
 .numery {
   margin-top: -10%;
   display: inline-block;
-  justify-content: space-between;
+  justify-content: center;
   font-size: 1.6rem;
 }
 .select {
@@ -182,9 +157,7 @@ body {
   font-size: 1.6rem;
 }
 
-.dodaj{
-  
-}
+
 #increment {
   height: 25px;
   width: 100px;
@@ -261,7 +234,9 @@ body {
 #addexercise{
   display: flex;
   justify-content: center;
-
+}
+#numeryx{
+  margin-top: 8%;
 }
 
 .active {
