--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -130,7 +130,6 @@ body {
 }
 
 .numery {
-  margin-top: -10%;
   display: inline-block;
   justify-content: center;
   font-size: 1.6rem;
@@ -237,21 +236,17 @@ body {
 }
 
 #stat{
-  margin-top: 120%;
   display: flex;
   justify-content: center;
   align-items: flex-end;
 }
 #statistic{
-  display: none;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  display: block;
   background-color: rgba(136, 80, 209, 0.479);
   transition: 0.2s;
   height: 50%;
   width: 100%;
   border-radius: 4px;
-  
 }
 
 .active {
