--- a/Exercise/Exercise.css
+++ b/Exercise/Exercise.css
@@ -1,11 +1,12 @@
 html {
   font-size: 62.5%;
-  font-family: "Gluten", cursive;
+  font-family: 'IBM Plex Mono', monospace;
 }
 
 * {
   box-sizing: border-box;
 }
+
 
 :root {
   --primary: purple;
@@ -130,9 +131,12 @@ body {
 }
 
 .numery {
-  display: inline-block;
+  display: flex;
   justify-content: center;
   font-size: 1.6rem;
+  align-items:flex-end;
+  flex-wrap: wrap;
+  margin-top: -20%;
 }
 .select {
   display: inline-block;
@@ -140,10 +144,13 @@ body {
   font-size: 1.6rem;
 }
 .block {
+  margin-bottom:  10%;
   display: inline-block;
   justify-content: center;
+  align-items: center;
   font-size: 1.6rem;
 }
+
 
 .number {
   height: 25px;
@@ -238,10 +245,11 @@ body {
 #stat{
  
   display: flex;
-  margin-bottom: 400%;
+
   justify-content: center;
   align-items: flex-end;
   width: 100%;
+  height: 60%;
 }
 /* #statbut{
  
